make libgd compilable

--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -8,14 +8,11 @@ RUN cd /tmp && \
   wget http://downloads.sourceforge.net/project/gnuplot/gnuplot/5.0.3/gnuplot-5.0.3.tar.gz && \
   tar zxf gnuplot-5.0.3.tar.gz  && \
   cd gnuplot-5.0.3 && \
-  apk --update add gd gd-dev libpng libpng-dev  && \
+  apk --update add gd gd-dev libpng libpng-dev libjpeg jpeg-dev freetype freetype-dev && \
   apk --update add --virtual builddeps build-base autoconf automake git python && \
-  ./configure && \
+  ./configure --bindir=/bin && \
   make && \
   make install && \
   apk del builddeps && rm -rf /var/cache/apk/* && \
   cd / && rm -rf /tmp/gnuplot*
-
-
-ENV PATH $PATH:/usr/local/bin
 
