--- a/opentsdb/Dockerfile
+++ b/opentsdb/Dockerfile
@@ -16,3 +16,9 @@ RUN cd /tmp && \
   apk del builddeps && rm -rf /var/cache/apk/* && \
   cd / && rm -rf /tmp/gnuplot*
 
+# set timezone
+RUN apk --update add tzdata && \
+  cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime  && \
+  echo "Asia/Shanghai"  >  /etc/timezone && \
+  apk del tzdata
+
