add more process for test

--- a/volume-test/Dockerfile
+++ b/volume-test/Dockerfile
@@ -2,4 +2,7 @@ FROM alpine:3.4
 
 VOLUME ["/var/lib/mysql", "/var/lib/postgres"]
 
-CMD ["tail", "-f", "/dev/null"]
+ADD start.sh /start.sh
+RUN chmod +x /start.sh
+
+CMD ["/start.sh"]
