change to one volume

--- a/volume-test/Dockerfile
+++ b/volume-test/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.4
 
-VOLUME ["/var/lib/mysql", "/var/lib/postgres"]
+VOLUME ["/var/lib/mysql"]
 
 ADD start.sh /start.sh
 RUN chmod +x /start.sh
